# based-chip8-pp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt
src/: chip8_cpu.cpp  chip8_impl.cpp  imgui_demo.cpp  libchip8_impl.cpp  main.cpp
src/core/: README.md  chip8_core.hpp  doxygen_config  libchip8++.hpp
